# iced_gif

./: Cargo.toml
example/: Cargo.toml
example/src/: main.rs
src/widget/: gif.rs
